--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,18 @@
 ---
-name: workflow to run linux commands 
+name: workflow1-runs linux commands
 on: workflow_dispatch
 jobs:
    job1:
-      runs_on: ubuntu-latest
-      steps:
-      - name: run linux command
-        run: echo "Hello ALL"
+     runs-on: ubuntu-latest
+     steps:
+      - name: Execute a linux command
+        run: echo "Hello All"
    job2:
-      runs_on: ubuntu-22.04
-      steps:
-      - name: run multiple linux commands
-        run:
-        hostname -s 
-        echo "Thankyou ALL"
+     needs: job1
+     runs-on: ubuntu-24.04
+     steps:
+      - name: Execute set of linux commands
+        run: |
+         hostname -s
+         echo "Thanks you All"
+
